--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
 	<title>Creative Nails & Spa</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+	<link href='http://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="assets/css/main.css" />
+	
 	<noscript>
 		<link rel="stylesheet" href="assets/css/noscript.css" />
 	</noscript>
@@ -18,7 +20,7 @@
 
 		<!-- Header -->
 		<header id="header" class="alt">
-			<h1><a href="index.html" ><img src="./images/logowhite.png" id="logo-header"> </a></h1>
+			<h1><a href="index.html"><img src="./images/logowhite.png" id="logo-header"> </a></h1>
 			<nav><a href="#menu">Menu</a></nav>
 		</header>
 
@@ -30,7 +32,8 @@
 					<li><a href="locations.html">Locations & Hours</a></li>
 					<li><a href="services.html">Services</a></li>
 					<li><a href="https://bookings.gettimely.com/creativenailsspa/bb/book">Book Appointment</a></li>
-					<li><a href="https://www.creativenailsnspa.com/clover"><span style="color: green;">Clover Rewards</span></a></li>
+					<li><a href="https://www.creativenailsnspa.com/clover"><span style="color: green;">Clover
+								Rewards</span></a></li>
 					<li><a href="aboutus.html">About Us</a></li>
 				</ul>
 				<a href="#" class="close">Close</a>
@@ -40,7 +43,7 @@
 		<!-- Banner -->
 		<section id="banner">
 			<div class="inner">
-				<img class="logo" src="images/logo.png" alt=""/>
+				<img class="logo" src="images/logo.png" alt="" />
 			</div>
 		</section>
 
@@ -50,10 +53,13 @@
 			<!-- One -->
 			<section id="one" class="wrapper spotlight style1">
 				<div class="inner">
-					<a href="https://www.creativenailsnspa.com/clover" class="image"><img src="images/clover.png" alt="" /></a>
+					<a href="https://www.creativenailsnspa.com/clover" class="image"><img src="images/clover.png"
+							alt="" /></a>
 					<div class="content">
-						<h2 class="major">Creative <span style="color: green; font-weight: bold">X</span>  Clover Rewards</h2>
-						<p>Reach <span style="text-decoration:underline">100 points</span> to receive a discount on your next spa day! <br>Join our Rewards Program on Clover now.</p>
+						<h2 class="major">Creative <span style="color: green; font-weight: bold">X</span> Clover Rewards
+						</h2>
+						<p>Reach <span style="text-decoration:underline">100 points</span> to receive a discount on your
+							next spa day! <br>Join our Rewards Program on Clover now.</p>
 						<a href="https://www.creativenailsnspa.com/clover" class="special ccolor">Learn more</a>
 					</div>
 				</div>
@@ -62,15 +68,14 @@
 			<!-- Two -->
 			<section id="two" class="wrapper alt spotlight style2">
 				<div class="inner">
-					<a href="https://bookings.gettimely.com/creativenailsspa/bb/book" class="image"><img src="images/pic03.jpg" alt="" /></a>
+					<a href="https://bookings.gettimely.com/creativenailsspa/bb/book" class="image"><img
+							src="images/serene-chair.png" alt="" /></a>
 					<div class="content">
-
-						<h2 class="major" style="color:#5b5b5b; border-bottom: solid 2px #f1c79c">Book An Appointment Online</h2>
+						<h2 class="major" style="color:#5b5b5b; border-bottom: solid 2px #f1c79c">Book An Appointment
+							Online</h2>
 						<p style="color:#5b5b5b">Schedule ahead on your own time.</p>
 						<a href="https://bookings.gettimely.com/creativenailsspa/bb/book" class="special"
 							style="color:#5b5b5b">Book Now</a>
-
-
 					</div>
 				</div>
 			</section>
@@ -78,55 +83,58 @@
 			<!-- Three -->
 			<section id="three" class="wrapper spotlight style3">
 				<div class="inner">
-					<a href="serene.html" class="image"><img src="images/pic02.jpg" alt="" style="margin-bottom: 20px"/></a>
+					<a href="serene.html" class="image"><img src="images/flower.png" alt=""
+							style="margin-bottom: 20px" /></a>
 					<div class="content">
-						<h2 class="major" style="color:#5b5b5b; border-bottom: solid 2px #e8e8e8">Serene <span style="color:#fab88a">@</span> Park Avenue</h2>
+						<h2 class="major" style="color:#5b5b5b; border-bottom: solid 2px #e8e8e8">Serene <span
+								style="color:#fab88a">@</span> Park Avenue</h2>
 						<p style="color:#7f7f7f">Learn about the newest addition to our Worcester location</p>
 						<a href="serene.html" class="special scolor">LEARN MORE</a>
 					</div>
 				</div>
 			</section>
 			<!-- Four -->
-			<section id="two" class="wrapper alt spotlight style5">
+			<section id="four" class="wrapper alt spotlight style5">
 				<div class="inner">
 					<a href="services.html" class="image"><img src="images/pic01.jpg" alt="" /></a>
 					<div class="content">
 
 						<h2 class="major" style="color:#5b5b5b; border-bottom: solid 2px #f3cde7">Services</h2>
-						<p style="color:#5b5b5b">Your satisfaction is our top priority. Our experienced and skillful technicians will lead you to a new level of comfort and beauty.</p>
+						<p style="color:#5b5b5b">Your satisfaction is our top priority. Our experienced and skillful
+							technicians will lead you to a new level of comfort and beauty.</p>
 						<a href="services.html" class="special" style="color:#5b5b5b">See Services</a>
 
 
 					</div>
 				</div>
 			</section>
-			<section id="three" class="wrapper spotlight style6">
+			<section id="five" class="wrapper spotlight style6">
 				<div class="inner">
 					<a class="image"><img src="images/services.png" alt="" /></a>
 					<div class="content">
 						<h2 class="major" style="color:#5b5b5b; border-bottom: solid 2px #c3c3c3">Mailing List</h2>
 						<p style="color:#5b5b5b">Join our mailing list and we'll keep you updated on
 							promos, special events, discounts, updates, and more! </p>
-							<form method="post" action="#">
-								<div class="fields" >
-									<div class="field">
-										<label for="name" style="color:#5b5b5b; ">Name</label>
-										<input style="background-color:#cfd3d5" type="text" name="name" id="name" />
-									</div>
-									<div class="field">
-										<label for="email" style="color:#5b5b5b">Email</label>
-										<input style="background-color:#cfd3d5" type="email" name="email" id="email" />
-									</div>
+						<form method="post" action="#">
+							<div class="fields">
+								<div class="field">
+									<label for="name" style="color:#5b5b5b; ">Name</label>
+									<input style="background-color:#cfd3d5" type="text" name="name" id="name" />
 								</div>
-								<ul class="actions">
-									<li><input class="submit submitalt" type="submit" value="SUBSRIBE NOW"/></li>
-								</ul>
-							</form>
+								<div class="field">
+									<label for="email" style="color:#5b5b5b">Email</label>
+									<input style="background-color:#cfd3d5" type="email" name="email" id="email" />
+								</div>
+							</div>
+							<ul class="actions">
+								<li><input class="submit submitalt" type="submit" value="SUBSRIBE NOW" /></li>
+							</ul>
+						</form>
 					</div>
 				</div>
 			</section>
 			<!-- Five -->
-			<section id="four" class="wrapper alt style7">
+			<section id="six" class="wrapper alt style7">
 				<div class="inner">
 					<h2 class="major">Come Visit Us</h2>
 					<section class="features">
